Imagem mala.png  nao aparece

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                       <span class="w-ctegory">Algoritmos Genéticos</span> / <span class="w-date">04/03/2020</span>
 					  <p class="subtitle-a">
                       Aplicação de algoritmo para descoberta dos itens que respeitem critérios.<br>
-				      O peso total não pode passar de 10kg.<br>
+				      O peso total não pode passar de 10kg (ANAC).<br>
                     </p>
                     </div>
                   </div>
