Imagem estava com M e nao m em mala.png

--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
 		  
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/images/kaggle.png" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/images/mala.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/images/kaggle.png" alt="" class="img-fluid">
+                  <img src="assets/images/mala.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
