--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/images/intro-bg.png)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/images/intro-bg-2.png)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
