Explicação dos apps agora com uma fonte melhor para leitura

--- a/bkp/index.html
+++ b/bkp/index.html
@@ -343,8 +343,7 @@
               <h3 class="title-a">
                 Portfolio
               </h3>
-              <!--<p class="subtitle-a">-->
-			  <p class="lead">
+              <p class="subtitle-a">
                 Aplicando os conhecimentos em análise de dados, criação de modelos e visualização de dados.<br>
 				Modelos alocados no Heroku e Shinyapps.<br> Divirta-se.
               </p>
@@ -366,8 +365,7 @@
                     <h2 class="w-title">Previsão de Preço</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Regressão</span> / <span class="w-date">08/07/2020</span>
-					  <!--<p class="subtitle-a"> -->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Projeto completo desde a coleta de dados, via scrap em sites de venda de apartamentos.<br>
 				      Tratamento dos dados, treinamento do modelo e deploy na nuvem.<br>
                     </p>
@@ -399,8 +397,7 @@
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
                       <span class="w-ctegory">NLP</span> / <span class="w-date">11/06/2020</span>
-					  <!--<p class="subtitle-a"> -->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Leitor de texto em formato txt, análise com Spacy.<br>
                     </p>
                     </div>
@@ -427,8 +424,7 @@
                     <h2 class="w-title">PCA</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Demo</span> / <span class="w-date">26/05/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Demonstração da aplicação do Principal Components Analyses (PCA).<br>
                     </p>
                     </div>
@@ -455,8 +451,7 @@
                     <h2 class="w-title">Tradutor de Idiomas</h2>
                     <div class="w-more">
                       <span class="w-ctegory">NLP</span> / <span class="w-date">11/04/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Leitura de texto digitados, conversão para diversos idiomas e leitura com voz.<br>
                     </p>
                     </div>
@@ -483,8 +478,7 @@
                     <h2 class="w-title">Kaggle / Github</h2>
                     <div class="w-more">
                       <span class="w-ctegory">EDA</span> / <span class="w-date">13/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Análise de uma competição do Kaggle: <b>Não comparecimento a consultas agendados no SUS</b>.<br>
 				      Gerado modelo de classificação.<br>
                     </p>
@@ -514,10 +508,9 @@
                     <h2 class="w-title">Controle de Peso</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Algoritmos Genéticos</span> / <span class="w-date">04/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Aplicação de algoritmo para descoberta dos itens que respeitem critérios.<br>
-				      O peso total não pode passar de 10kg.<br>
+				      O peso total não pode passar de 10kg (ANAC).<br>
                     </p>
                     </div>
                   </div>
@@ -545,8 +538,7 @@
                     <h2 class="w-title">Ibovespa</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Regressão</span> / <span class="w-date">04/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Visualização de valores de ações na forma de calendário, usando biblioteca OpenAir.<br>
                     </p>
                     </div>
@@ -576,8 +568,7 @@
                     <h2 class="w-title">Análise de Acidentes de Transito</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Apriori</span> / <span class="w-date">04/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Descoberta dos elementos que compõem um acidente de trânsito.<br>
                     </p>
                     </div>
@@ -607,8 +598,7 @@
                     <h2 class="w-title">Classificação de imagens</h2>
                     <div class="w-more">
                       <span class="w-ctegory">OpenCV</span> / <span class="w-date">09/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Aplicação de Visão Computacional.<br>
                     </p>
                     </div>
@@ -638,8 +628,7 @@
                     <h2 class="w-title">Previsão da Ação Petr4</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Regressão</span> / <span class="w-date">04/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Exemplo de aplicação do algoritmo Arima numa série temporal.<br>
                     </p>
                     </div>
@@ -669,8 +658,7 @@
                     <h2 class="w-title">Tableau</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Dashboards</span> / <span class="w-date">05/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Dashboards construidos com dados públicos.<br>
                     </p>
                     </div>
@@ -700,8 +688,7 @@
                     <h2 class="w-title">R</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Gráficos</span> / <span class="w-date">05/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Estudos de aplicação de R para criação de gráficos.<br>
                     </p>
                     </div>
@@ -731,8 +718,7 @@
                     <h2 class="w-title">São Silvestre</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Streamlit</span> / <span class="w-date">04/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Aplicação da biblioteca Streamlit na construção de uma página Web.<br>
                     </p>
                     </div>
@@ -762,8 +748,7 @@
                     <h2 class="w-title">R - Modelo Titanic</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Classificação</span> / <span class="w-date">27/01/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Modelo construido usando R e deploy feito na nuvem RShinyapps.<br>
                     </p>
                     </div>
@@ -793,8 +778,7 @@
                     <h2 class="w-title">Python - Modelo Titanic</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Classificação</span> / <span class="w-date">04/03/2020</span>
-					  <!--<p class="subtitle-a">-->
-					  <p class="lead">
+					  <p class="subtitle-a">
                       Uso da biblioteca Streamlit na construção de um modelo de classificação.<br>
 				      Deploy na nuvem Heroku.<br>
                     </p>
