Created new section - Raio-X

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="nav-link js-scroll" href="#work">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#blog">Blog</a>
+            <a class="nav-link js-scroll" href="#blog">Raio-X</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contato</a>
