Changed subtitle in X-Ray section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Nome: </span> <span>Silvio Cesar De Lima</span></p>
+                        <p><span class="title-s">Nome: </span> <span>Silvio César De Lima</span></p>
                         <p><span class="title-s">Profile: </span> <span><br>Cientista de Dados <br> Analista de Dados</span></p>
                         <p><span class="title-s">Email: </span> <span>silviolima07@gmail.com</span></p>
                         <p><span class="title-s">Fone: </span> <span>(+5512)99646-2527</span></p>
@@ -877,8 +877,7 @@
                 Raio-X
               </h3>
               <p class="subtitle-a">
-                Etapas que compõem um projeto
-              </p>
+                Detalhes - Frameworks - Códigos
               <div class="line-mf"></div>
             </div>
           </div>
