--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
+ <! -- iconify design-->
+ <! -- <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script> -->
+ 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -345,9 +348,11 @@
               </h3>
               <!--<p class="subtitle-a">-->
 			  <p class="lead">
-                Aplicando os conhecimentos em análise de dados, criação de modelos e visualização de dados.<br>
-				Modelos alocados no Heroku e Shinyapps.<br> Divirta-se.
-              </p>
+                Aplicando os conhecimentos em análise de dados, criação de modelos e visualização de dados.</p>
+				<p class="lead" style="color:red;">Modelos alocados no Heroku e Shinyapps podem levar 30s  para iniciar.</p>
+                                <p class="lead"> Por favor, clique para abrir o app.<br></p>
+                      <img src="assets/images/plus.png" alt="" class="img-fluid"> 
+              
               <div class="line-mf"></div>
             </div>
           </div>
@@ -365,7 +370,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Previsão de Preço</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Regressão</span> / <span class="w-date">08/07/2020</span>
+                      <span class="w-ctegory">Regressão / Heroku</span> / <span class="w-date">08/07/2020</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
                       Projeto completo desde a coleta de dados, via scrap em sites de venda de apartamentos.<br>
@@ -398,7 +403,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">NLP</span> / <span class="w-date">11/06/2020</span>
+                      <span class="w-ctegory">NLP / Heroku</span> / <span class="w-date">11/06/2020</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
                       Leitor de texto em formato txt, análise com Spacy.<br>
@@ -426,7 +431,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">PCA</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Demo</span> / <span class="w-date">21/05/2020</span>
+                      <span class="w-ctegory">Demo / Heroku</span> / <span class="w-date">21/05/2020</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Demonstração da aplicação do Principal Components Analyses (PCA).<br>
@@ -454,7 +459,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Tradutor de Idiomas</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">NLP</span> / <span class="w-date">15/04/2020</span>
+                      <span class="w-ctegory">NLP / Heroku</span> / <span class="w-date">15/04/2020</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Leitura de texto digitados, conversão para diversos idiomas e leitura com voz.<br>
@@ -483,9 +488,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Kaggle / Github</h2>
+                    <h2 class="w-title">Kaggle</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Análises</span> / <span class="w-date">13/03/2020</span>
+                      <span class="w-ctegory">Análises / Github</span> / <span class="w-date">13/03/2020</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Datasets do Kaggle: análise exploratória, treinamento e avaliação de modelos.<br>
@@ -519,7 +524,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Classificação de imagens</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">OpenCV</span> / <span class="w-date">17/04/2020</span>
+                      <span class="w-ctegory">OpenCV / Heroku</span> / <span class="w-date">17/04/2020</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Aplicação de Visão Computacional.<br>
@@ -550,7 +555,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Ibovespa</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Regressão</span> / <span class="w-date">13/12/2019</span>
+                      <span class="w-ctegory">Regressão / Shinyapps</span> / <span class="w-date">13/12/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Visualização de valores de ações na forma de calendário, usando R / OpenAir.<br>
@@ -583,7 +588,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Previsão da Ação Petr4</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Regressão</span> / <span class="w-date">04/12/2019</span>
+                      <span class="w-ctegory">Regressão / Shinyapps</span> / <span class="w-date">04/12/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Exemplo de aplicação do algoritmo Arima numa série temporal.<br>
@@ -614,7 +619,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Tableau Public </h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Dashboards</span> / <span class="w-date">04/09/2019</span>
+                      <span class="w-ctegory">Dashboards / Tableau</span> / <span class="w-date">04/09/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Diversos dashboards construidos com dados públicos.<br>
@@ -623,7 +628,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://public.tableau.com/profile/silvio8265#!/"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="https://public.tableau.com/profile/silvio8265#!/"><span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -647,7 +652,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Controle de Peso</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Algoritmos Genéticos</span> / <span class="w-date">29/07/2019</span>
+                      <span class="w-ctegory">Alg. Genéticos / Shinyapps</span> / <span class="w-date">29/07/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Modelo configurado para descoberta dos itens que respeitem critérios.<br>
@@ -680,7 +685,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Análise de Acidentes de Transito</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Apriori</span> / <span class="w-date">07/07/2019</span>
+                      <span class="w-ctegory">Apriori / Shinyapps</span> / <span class="w-date">07/07/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Descoberta dos elementos que compõem um acidente de trânsito.<br>
@@ -711,7 +716,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Rpubs</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Gráficos</span> / <span class="w-date">15/04/2019</span>
+                      <span class="w-ctegory">Gráficos / Rpub</span> / <span class="w-date">15/04/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Estudos de aplicação de R para criação de gráficos.<br>
@@ -743,10 +748,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">São Silvestre</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Streamlit</span> / <span class="w-date">24/12/2019</span>
+                      <span class="w-ctegory">Streamlit / Heroku</span> / <span class="w-date">24/12/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
-                      Aplicação da biblioteca Streamlit na construção de uma página Web.<br>
+                      Aplicação da lib Streamlit na construção de uma página Web.<br>
                     </p>
                     </div>
                   </div>
@@ -774,10 +779,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">R - Modelo Titanic</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Classificação</span> / <span class="w-date">18/06/2019</span>
+                      <span class="w-ctegory">Classificação / Shinyapps</span> / <span class="w-date">18/06/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
-                      Modelo construido usando R e deploy feito na nuvem RShinyapps.<br>
+                      Modelo construido usando R.<br>
                     </p>
                     </div>
                   </div>
@@ -805,11 +810,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Python - Modelo Titanic</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Classificação</span> / <span class="w-date">11/11/2019</span>
+                      <span class="w-ctegory">Classificação / Heroku</span> / <span class="w-date">11/11/2019</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Modelo para classificação de sobreviventes.<br>
-				      Deploy no Heroku.<br>
                     </p>
                     </div>
                   </div>
