--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
                 Raio-X
               </h3>
               <p class="subtitle-a">
-                Detalhes - Frameworks - Códigos
+                Detalhes - Frameworks - Github
               <div class="line-mf"></div>
             </div>
           </div>
@@ -935,7 +935,8 @@
                     <h6 class="category">Web Scrap</h6>
                   </div>
                 </div>
-                <h3 class="card-title">Github:<a href="https://github.com/silviolima07/Regression_Apartment_Sales">Github-Regression_Apartment</a></h3>
+                <p>Código:</p>
+                <h3 class="card-title"><a href="https://github.com/silviolima07/Regression_Apartment_Sales">Github-Regression_Apartment</a></h3>
                 <p class="card-description">
                   <strong>E</strong>mpresas precisam tomar decisões diariamente, a partir de dados históricos acumulados, essa tomada de decisão pode ter maior probabilidade de acerto, quando suportada por dados.<br> 
                  <strong>P</strong>orém, nem sempre dados internos bastam e outras fontes precisam ser consultadas e mais dados incluidos.<br>
@@ -969,7 +970,8 @@
                     <h6 class="category">Deploy</h6>
                   </div>
                 </div>
-                <h3 class="card-title">Github:<a href="https://github.com/silviolima07/app-venda-imoveis">Github-Web_App_Apartment</a></h3>
+                <p>Código:</p>
+                <h3 class="card-title"><a href="https://github.com/silviolima07/app-venda-imoveis">Github-Web_App_Apartment</a></h3>
                 <p class="card-description">
                   <strong>A</strong> conclusão de um projeto de machine learning, pode se constituir da entrega dos relatórios de teste, a documentaçao gerada e de uma aplicação web, onde o cliente possa testar e avaliar a eficácia da solução.<br> <strong>A</strong> empresa pode verificar junto do pessoal de TI interno, a melhor forma de tornar a solução disponível aos interessados.<br> <strong>E</strong>m meus trabalhos com <strong>R</strong> usei a infraestrutura da <strong>RShinyApps</strong> para hospedar minhas aplicações usando a biblioteca <strong>Shiny</strong>.<br> <strong>P</strong>ara aplicações <strong>Python</strong>, construidas usando as bibliotecas <strong>Streamlit</strong> e <strong>Flask</strong>, fiz a hospedagem no <strong>Heroku</strong>.<br><strong>B</strong>asta acessar a url e utilizar.<br>
                 </p>
@@ -1012,12 +1014,14 @@
                       </ul>
                     
 			<div class="socials">
+                        <p>Linkedin:</p>
                          <ul>
                           <li><a href="https://www.linkedin.com/in/silviocesarlima/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                          </ul>
                         </div>
 			
                       <div class="socials">
+                      <p>Github:</p>
                          <ul>
                           <li><a href="https://github.com/silviolima07/"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                          </ul>
