--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                   </div>
                 </div>
                 <p>Código:</p>
-                <h3 class="card-title">Código: <a href="https://github.com/silviolima07/Regression_Apartment_Sales">Github-Regression_Apartment</a></h3>
+                <h3 class="card-title">Código:<br> <a href="https://github.com/silviolima07/Regression_Apartment_Sales">Github-Regression_Apartment</a></h3>
                 <p class="card-description">
                   <strong>E</strong>mpresas precisam tomar decisões diariamente, a partir de dados históricos acumulados, essa tomada de decisão pode ter maior probabilidade de acerto, quando suportada por dados.<br> 
                  <strong>P</strong>orém, nem sempre dados internos bastam e outras fontes precisam ser consultadas e mais dados incluidos.<br>
@@ -1021,7 +1021,7 @@
                         </div>
 			
                       <div class="socials">
-                      <p>Github:</p>
+                      <p><strong>Github:</strong></p>
                          <ul>
                           <li><a href="https://github.com/silviolima07/"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                          </ul>
