--- a/index.html
+++ b/index.html
@@ -935,7 +935,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+
+          <!--<div class="col-md-4">
             <div class="card card-blog">
                 <div class="work-box">
                    <div class="work-img">
@@ -948,16 +950,16 @@
                       <h6 class="category">Deploy</h6>
                     </div>
                   </div>
-                  <p>Deploy do modelo</p>
+                  <h3 class="card-title">Deploy do modelo</h3>
                   <p class="card-description">
                   <strong>A</strong> conclusão de um projeto de machine learning, pode se constituir da entrega dos relatórios de teste, a documentaçao gerada e de uma aplicação web, onde o cliente possa testar e avaliar a eficácia da solução.<br> <strong>A</strong> empresa pode verificar junto do pessoal de TI interno, a melhor forma de tornar a solução disponível aos interessados.<br> <strong>E</strong>m meus trabalhos com <strong>R</strong> usei a infraestrutura da <strong>RShinyApps</strong> para hospedar minhas aplicações usando a biblioteca <strong>Shiny</strong>.<br> <strong>P</strong>ara aplicações <strong>Python</strong>, construidas usando as bibliotecas <strong>Streamlit</strong> e <strong>Flask</strong>, fiz a hospedagem no <strong>Heroku</strong>.<br><strong>B</strong>asta acessar a url e utilizar.<br>
                   </p>
                   <h3 class="card-title">Código:<br><a href="https://github.com/silviolima07/app-venda-imoveis">Github-Web_App_Apartment</a></h3>
                 </div>
             </div>
-          <!--</div> -->
+          </div>
         </div>
-      </div>
+      </div> -->
     </section><!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
