--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                 <strong>Web Scrap</strong>, permite exatamente essa operação. A partir de bibliotecas <strong>Python</strong> ou <strong>R</strong>, páginas da internet podem ser lidas e as informações desejadas serem extraidas e assim gerar uma base de dados nova.<br>
               <strong>N</strong>o modelo que faz <strong>Previsão do Preço Venda de Apartamento</strong>, fiz o scrap em 200 páginas e extrai 4000 anúncios.<br>
                 </p>
-               <h3 class="card-title">Código:<br> <a href="https://github.com/silviolima07/Regression_Apartment_Sales">Github-Regression_Apartment</a></h3
+               <h3 class="card-title">Código:<br> <a href="https://github.com/silviolima07/Regression_Apartment_Sales">Github-Regression_Apartment</a></h3>
               </div>
             </div>
           </div>
@@ -940,10 +940,10 @@
          <div class="col-md-4">
             <div class="card card-blog">
               <div class="work-box">
-              <div class="work-img">
+                <div class="work-img">
                   <img src="assets/images/scrap.png" alt="" class="img-fluid">
                 </div>
-             </div>
+              </div>
               <div class="card-body">
                 <div class="card-category-box">
                   <div class="card-category">
@@ -952,12 +952,12 @@
                 </div>
                 <h3 class="card-title">Deploy do modelo</h3>
                 <p class="card-description">
-                  <strong>A</strong> conclusão de um projeto de machine learning, pode se constituir da entrega dos relatórios de teste, a documentaçao gerada e de uma aplicação web, onde o cliente possa testar e avaliar a eficácia da solução.<br> <strong>A</strong> empresa pode verificar junto do pessoal de TI interno, a melhor forma de tornar a solução disponível aos interessados.<br> <strong>E</strong>m meus trabalhos com <strong>R</strong> usei a infraestrutura da <strong>RShinyApps</strong> para hospedar minhas aplicações usando a biblioteca <strong>Shiny</strong>.<br> <strong>P</strong>ara aplicações <strong>Python</strong>, construidas usando as bibliotecas <strong>Streamlit</strong> e <strong>Flask</strong>, fiz a hospedagem no <strong>Heroku</strong>.<br><strong>B</strong>asta acessar a url e utilizar.<br>
+                 <strong>A</strong> conclusão de um projeto de machine learning, pode se constituir da entrega dos relatórios de teste, a documentaçao gerada e de uma aplicação web, onde o cliente possa testar e avaliar a eficácia da solução.<br> <strong>A</strong> empresa pode verificar junto do pessoal de TI interno, a melhor forma de tornar a solução disponível aos interessados.<br> <strong>E</strong>m meus trabalhos com <strong>R</strong> usei a infraestrutura da <strong>RShinyApps</strong> para hospedar minhas aplicações usando a biblioteca <strong>Shiny</strong>.<br> <strong>P</strong>ara aplicações <strong>Python</strong>, construidas usando as bibliotecas <strong>Streamlit</strong> e <strong>Flask</strong>, fiz a hospedagem no <strong>Heroku</strong>.<br><strong>B</strong>asta acessar a url e utilizar.<br>
                 </p>
-               <h3 class="card-title">Código:<br> <a href="https://github.com/silviolima07/app-venda-imoveis">Github-Web_App_Apartment</a></h3
+               <h3 class="card-title">Código:<br> <a href="https://github.com/silviolima07/app-venda-imoveis">Github-Web_App_Apartment</a></h3>
               </div>
             </div>
-          </div>
+         </div>
 
           <!--<div class="col-md-4">
             <div class="card card-blog">
