--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
             <div class="card card-blog">
               <div class="work-box">
                 <div class="work-img">
-                  <img src="assets/images/scrap.png" alt="" class="img-fluid">
+                  <img src="assets/images/deploy2.png" alt="" class="img-fluid">
                 </div>
               </div>
               <div class="card-body">
