--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <a class="nav-link js-scroll" href="#blog">Raio-X</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#service">Artigos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contato</a>
           </li>
         </ul>
@@ -983,6 +986,128 @@
         </div>
       </div> -->
     </section><!-- End Blog Section -->
+
+   <!-- ======= Blog Section ======= -->
+	
+    <!--<section id="Article" class="blog-mf sect-pt4 route">
+    <section id="service" class="services-mf pt-5 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Artigos
+              </h3>
+              <p class="subtitle-a">
+                Tutorial dos web apps implementados
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card card-blog">
+            <div class="work-box">
+              <div class="work-img">
+                  <img src="assets/images/chaves.png" alt="" class="img-fluid">
+                </div>
+             </div>
+
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Passo a passo</h6>
+                  </div>
+                </div>
+               <h4 class="card-title">Medium: <a href="https://medium.com/@silcesarlima/web-scrap-7e99db63e8e0">Web Scrap</a></h4>
+               <h4 class="card-title">Medium: <a href="https://medium.com/@silcesarlima/prevendo-o-pre%C3%A7o-de-venda-de-apartamentos-ba9c6d1dfe5f">Prevendo o Preço de Apartamentos</a></h4>
+               <h4 class="card-title">Medium: <a href="https://medium.com/@silcesarlima/web-apps-python-streamlit-e-heroku-934d8186ac80">Web-Apps: /Deploy</a></h4>
+
+           
+                
+       </section><!-- End Blog Section -->
+
+     <section id="service" class="blog-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Artigos
+              </h3>
+              <p class="subtitle-a">
+                Relatórios descrevendo:<br>coleta, limpeza, tratamento dos dados,<br> treinamento, avaliação e deploy dos modelos
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card card-blog">
+            <div class="work-box">
+              <div class="work-img">
+                  <img src="assets/images/scrap.png" alt="" class="img-fluid">
+                </div>
+             </div>
+
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Coleta dos Dados</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Definição</h3>-->
+                <p class="card-description">
+                  <h3 class="card-title">Medium:<br><a href="https://medium.com/@silcesarlima/web-scrap-7e99db63e8e0">Web Scrap</a></h3>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card card-blog">
+              <div class="work-box">
+              <div class="work-img">
+                  <img src="assets/images/vende-se.png" alt="" class="img-fluid">
+                </div>
+             </div>
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Tratamentos dos Dados</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Coleta de Dados</h3>-->
+                <p class="card-description">
+                </p>
+               <h3 class="card-title">Medium:<br><a href="https://medium.com/@silcesarlima/prevendo-o-pre%C3%A7o-de-venda-de-apartamentos-ba9c6d1dfe5f">Prevendo o Preço de Apartamentos</a></h3>
+              </div>
+            </div>
+          </div>
+
+         <div class="col-md-4">
+            <div class="card card-blog">
+              <div class="work-box">
+                <div class="work-img">
+                  <img src="assets/images/chaves.png" alt="" class="img-fluid">
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Deploy do Modelo</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Deploy do modelo</h3>-->
+                <p class="card-description">
+                </p>
+               <h3 class="card-title">Medium:<br><a href="https://medium.com/@silcesarlima/web-apps-python-streamlit-e-heroku-934d8186ac80">Web-Apps: Deploy</a></h3>
+              </div>
+            </div>
+         </div>
+    </section><!-- End Blog Section -->
+
+
 
     <!-- ======= Contact Section ======= -->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)"
