Added video chatbot b3

--- a/index.html
+++ b/index.html
@@ -360,7 +360,37 @@
             </div>
           </div>
         </div>
-        <div class="row">
+
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Chatbot B3</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Time Series / Heroku</span> / <span class="w-date">09/08/2020</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Chatbot que traz a cotação de 3 ações.<br>Faz a previsão usando a lib Prophet.<br>
+                    </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "600" controls>
+                     <source src="assets/video/b3.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
+       
+ 
+<!--------------------------->
+
+      <div class="row">
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/images/chaves.png" data-gall="portfolioGallery" class="venobox">
@@ -386,15 +416,16 @@
                       <a href="https://app-imoveis.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
-                </div>
-              </div>
             </div>
           </div>
-          <div class="col-md-4">
-		  
-		 <!--------------------------->
-		 
-		 
+         </div>
+        </div>
+
+<!------------------>
+
+
+
+          <div class="col-md-4">		 
             <div class="work-box">
               <a href="assets/images/reader.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
@@ -422,6 +453,9 @@
               </div>
             </div>
           </div>
+
+<!--------------------------->
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/images/pca.png" data-gall="portfolioGallery" class="venobox">
@@ -450,6 +484,9 @@
               </div>
             </div>
           </div>
+
+<!--------------------------->
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/images/people_speaking.jpg" data-gall="portfolioGallery" class="venobox">
@@ -1035,8 +1072,9 @@
               <h3 class="title-a">
                 Artigos
               </h3>
-              <p class="subtitle-a">
-                Relatórios descrevendo:<br>coleta, limpeza, tratamento dos dados,<br> treinamento, avaliação e deploy dos modelos
+              <h6 class="card-title">
+                Relatórios descrevendo:<br>coleta, limpeza e tratamento dos dados,<br> treinamento, avaliação e deploy dos modelos
+             </h6>
               <div class="line-mf"></div>
             </div>
           </div>
