Added new article - Chatbot B3

--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,29 @@
             <div class="card card-blog">
             <div class="work-box">
               <div class="work-img">
+                  <img src="assets/images/bot-b3.png" alt="" class="img-fluid">
+                </div>
+             </div>
+
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Telegram - bot</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Definição</h3>-->
+                <p class="card-description">
+                  <h3 class="card-title">Medium:<br><a href="https://medium.com/@silcesarlima/telegram-chatbots-prophet-cota%C3%A7%C3%A3o-e-previs%C3%A3o-de-valores-d8ae7ca94714">Chatbot B3</a></h3>
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-md-4">
+            <div class="card card-blog">
+            <div class="work-box">
+              <div class="work-img">
                   <img src="assets/images/scrap.png" alt="" class="img-fluid">
                 </div>
              </div>
@@ -1100,7 +1123,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div>   
 
           <div class="col-md-4">
             <div class="card card-blog">
