Added new article about integration tools

--- a/index.html
+++ b/index.html
@@ -360,7 +360,35 @@
             </div>
           </div>
         </div>
+		
+		
+<!--------------------------->
 
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Integrando: PDI, S3 e Power BI</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Manipulação de dados</span> / <span class="w-date">06/10/2020</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Levando dados via Pentaho PDI até o serviço de repositório AWS, Bucket S3.<br>Buscando os dados no S3 através de scripts Python  no Power BI.
+                    </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "600" controls>
+                     <source src="assets/video/S3.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
+       
+ 
 <!--------------------------->
 
            <div class="work-content">
@@ -1080,6 +1108,29 @@
           </div>
         </div>
         <div class="row">
+		
+		  <div class="col-md-4">
+            <div class="card card-blog">
+            <div class="work-box">
+              <div class="work-img">
+                  <img src="assets/images/3-tools.png" alt="" class="img-fluid">
+                </div>
+             </div>
+
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Tools</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Definição</h3>-->
+                <p class="card-description">
+                  <h3 class="card-title">Medium:<br><a href="https://medium.com/@silcesarlima/integrando-pentaho-pdi-aws-s3-e-power-bi-88cfe7424623">Integrando: PDI, S3 e Power BI</a></h3>
+                </p>
+              </div>
+            </div>
+          </div>
+		  
           <div class="col-md-4">
             <div class="card card-blog">
             <div class="work-box">
