Update index.html text-slider

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Silvio Lima</h>
-		  <p class="intro-subtitle"><span class="text-slider-items">Analista de Dados / Business Intelligence</span><strong class="text-slider"></strong></p>
+		  <p class="intro-subtitle"><span class="text-slider-items">Cientista de Dados / Analista de Dados</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
