App text-reader-file com problema - Foi comentada a entrada dele

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 <!------------------>
 
 
-
+          <!--
           <div class="col-md-4">		 
             <div class="work-box">
               <a href="assets/images/reader.png" data-gall="portfolioGallery" class="venobox">
@@ -467,7 +467,7 @@
                     <div class="w-more">
                       <span class="w-ctegory">NLP / Heroku</span> / <span class="w-date">11/06/2020</span>
 					  <!--<p class="subtitle-a"> -->
-					  <p class="lead">
+					  <!--<p class="lead">
                       Leitor de texto em formato txt, análise com Spacy.<br>
                     </p>
                     </div>
@@ -481,7 +481,7 @@
               </div>
             </div>
           </div>
-
+        >
 <!--------------------------->
 
           <div class="col-md-4">
