App text-reader-file restaurado e agora vindo da Streamlit-Sharing

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Previsão de Preço</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Regressão / Heroku</span> / <span class="w-date">08/07/2020</span>
+                      <span class="w-ctegory">Regressão / Streamlit-Sharing</span> / <span class="w-date">08/07/2020</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
                       Projeto completo desde a coleta de dados, via scrap em sites de venda de apartamentos.<br>
@@ -441,7 +441,8 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://app-imoveis.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="https://share.streamlit.io/silviolima07/app-venda-imoveis/app.py/"><span class="ion-ios-plus-outline"></span></a>
+					  <!--<a href="https://app-imoveis.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>-->
                     </div>
                   </div>
             </div>
@@ -451,8 +452,6 @@
 
 <!------------------>
 
-
-          <!--
           <div class="col-md-4">		 
             <div class="work-box">
               <a href="assets/images/reader.png" data-gall="portfolioGallery" class="venobox">
@@ -465,23 +464,24 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">NLP / Heroku</span> / <span class="w-date">11/06/2020</span>
+                      <span class="w-ctegory">NLP / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
 					  <!--<p class="subtitle-a"> -->
-					  <!--<p class="lead">
+					  <p class="lead">
                       Leitor de texto em formato txt, análise com Spacy.<br>
                     </p>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://app-text-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="https://share.streamlit.io/silviolima07/text-file-reader/app.py/"><span class="ion-ios-plus-outline"></span></a>
+					  <!--<a href="app-text-file-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>-->
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        >
+        
 <!--------------------------->
 
           <div class="col-md-4">
