--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
 <!------------------>
 
-          <div class="col-md-4">		 
+   <!--       <div class="col-md-4">		 
             <div class="work-box">
               <a href="assets/images/reader.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
@@ -465,8 +465,7 @@
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
                       <span class="w-ctegory">NLP / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
-					  <!--<p class="subtitle-a"> -->
-					  <p class="lead">
+					  <!--<p class="subtitle-a">
                       Leitor de texto em formato txt, análise com Spacy.<br>
                     </p>
                     </div>
@@ -474,13 +473,14 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="https://share.streamlit.io/silviolima07/text-file-reader/app.py/"><span class="ion-ios-plus-outline"></span></a>
-					  <!--<a href="app-text-file-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>-->
+					  <!--<a href="app-text-file-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+		  -->
         
 <!--------------------------->
 
@@ -512,6 +512,7 @@
               </div>
             </div>
           </div>
+		  <
 
 <!--------------------------->
 
