--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
                       <span class="w-ctegory">NLP / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
-					  <!--<p class="subtitle-a">
+					  <p class="subtitle-a">
                       Leitor de texto em formato txt, análise com Spacy.<br>
                     </p>
                     </div>
@@ -512,7 +512,6 @@
               </div>
             </div>
           </div>
-		  <
 
 <!--------------------------->
 
