Updated some apps

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
 <!------------------>
 
-   <!--       <div class="col-md-4">		 
+          <div class="col-md-4">		 
             <div class="work-box">
               <a href="assets/images/reader.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
@@ -464,23 +464,23 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">NLP / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
+                      <span class="w-ctegory">TextBlob / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
 					  <p class="subtitle-a">
-                      Leitor de texto em formato txt, análise com Spacy.<br>
+                      Leitura de textos em txt e conversão de idioma.<br>
                     </p>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://share.streamlit.io/silviolima07/text-file-reader/app.py/"><span class="ion-ios-plus-outline"></span></a>
-					  <!--<a href="app-text-file-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
+                      <!--<a href="https://share.streamlit.io/silviolima07/text-file-reader/app.py/"><span class="ion-ios-plus-outline"></span></a>-->
+					  <a href="app-text-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-		  -->
+		  
         
 <!--------------------------->
 
@@ -536,7 +536,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://app-textblob-v2.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="https://app-textblob.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
