Updated some apps

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <!--<a href="https://share.streamlit.io/silviolima07/text-file-reader/app.py/"><span class="ion-ios-plus-outline"></span></a>-->
-					  <a href="https://app-text-reader.herokuapp.com/> <span class="ion-ios-plus-outline"></span></a>
+					  <a href="https://app-text-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
