--- a/index.html
+++ b/index.html
@@ -465,8 +465,11 @@
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
                       <span class="w-ctegory">TextBlob / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
-					  <p class="subtitle-a">
+					  <!--<p class="subtitle-a">-->
+					  <p class="lead">
                       Leitura de textos em txt e conversão de idioma.<br>
+                    </p>
+                      <br>
                     </p>
                     </div>
                   </div>
