--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">TextBlob / Streamlit-Sharing</span> / <span class="w-date">11/06/2020</span>
+                      <span class="w-ctegory">TextBlob / Heroku</span> / <span class="w-date">11/06/2020</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
                       Leitura de textos em txt e conversão de idioma.<br>
