Logo kaggle-colab

--- a/index.html
+++ b/index.html
@@ -550,26 +550,26 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/images/kaggle.png" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/images/kaggle.png" alt="" class="img-fluid">
+                  <img src="assets/images/kaggle-colab.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Kaggle</h2>
+                    <h2 class="w-title">Kaggle & Colab</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Análises / Github</span> / <span class="w-date">13/03/2020</span>
 					  <!--<p class="subtitle-a">-->
 					  <p class="lead">
-                      Datasets do Kaggle: análise exploratória, treinamento e avaliação de modelos.<br>
+                      Análise exploratória, treinamento e avaliação de modelos.<br>
                     </p>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/silviolima07/Kaggle"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="https://github.com/silviolima07/Kaggle-Colab"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
