--- a/index.html
+++ b/index.html
@@ -414,11 +414,43 @@
                   </video>
                 </div>
             </div>
-       
+<!--------------------------->
+
+
+      <div class="row">
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/images/webscrap.png" data-gall="portfolioGallery" class="venobox">
+                <div class="work-img">
+                  <img src="assets/images/webscrap.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Webscrap do Indeed</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Scrap / Streamlit-Sharing</span> / <span class="w-date">15/01/2021</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Projeto de scrap de oportunidades abertas em Data Science no Indeed .<br>
+				      Uso das libs: BeautifulSoup e Selenium.<br>
+                    </p>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://share.streamlit.io/silviolima07/app-indeed/main/app.py/"><span class="ion-ios-plus-outline"></span></a>
+					  <!--<a href="https://app-imoveis.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>-->
+                    </div>
+                  </div>
+            </div>
+          </div>
+         </div>
+        </div>       
  
 <!--------------------------->
 
-      <div class="row">
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/images/chaves.png" data-gall="portfolioGallery" class="venobox">
