Video about Github Action

--- a/index.html
+++ b/index.html
@@ -361,6 +361,32 @@
           </div>
         </div>
 		
+
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Github Action: Atualizando um dashboard</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Automação</span> / <span class="w-date">10/03/2021</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Atualização e publicação de dashboard criado com Datapane.<br>A execução dos passos é administrada pelo Github Action.<br>Que permite gerenciar o ambiente de execução, a sequência dos passos e também acessar Tokens/Keys como variáveis de ambiente, mantidas criptografadas em Github/Settings/secrets.
+                    </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "600" controls>
+                     <source src="assets/video/GithubAction.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
 		
 <!--------------------------->
 
