--- a/index.html
+++ b/index.html
@@ -372,9 +372,11 @@
                       <span class="w-ctegory">Automação</span> / <span class="w-date">10/03/2021</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
-					  Veja-> <a href="https://datapane.com/u/silviolima07/reports/vagas-em-data-science">Vagas em Data Science</span></a><br>
+					  Veja-> <a href="https://datapane.com/u/silviolima07/reports/vagas-em-data-science">Dashboard Vagas em Data Science</span></a><br>
                       Atualização e publicação de dashboard criado com Datapane.<br>A execução dos passos é administrada pelo Github Action.<br>Que permite gerenciar o ambiente de execução, a sequência dos passos e também acessar Tokens/Keys como variáveis de ambiente, mantidas criptografadas em Github/Settings/secrets.
-                    </p>
+                      <br>
+					  Github: <a href="https://github.com/silviolima07/datapane-vagas">https://github.com/silviolima07/datapane-vagas</span></a>
+					</p>
                     </div>
                   </div>
                 </div>
