--- a/index.html
+++ b/index.html
@@ -362,6 +362,34 @@
         </div>
 		
 
+
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Hands on AWS - Loab Balancing</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">21/03/2021</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Implementação do serviço de Load Balancing, simulando dois ambientes.<br>Dois grupos de instâncias distintas, onde uma aplicação HTTP rodando em cada instância do grupo é acessada, de acordo com um filtro implementado na url do DNS do load balancer.
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "600" controls>
+                     <source src="assets/video/LB.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
+		
+
 <!--------------------------->
 
            <div class="work-content">
