--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
            <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Hands on AWS - Loab Balancing</h2>
+                    <h2 class="w-title">Hands on AWS - Load Balancing</h2>
                     <div class="w-more">
                       <span class="w-ctegory">AWS</span> / <span class="w-date">21/03/2021</span>
 					  <!--<p class="subtitle-a"> -->
