Adjusted phone number

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <p><span class="title-s">Nome: </span> <span>Silvio César De Lima</span></p>
                         <p><span class="title-s">Profile: </span> <span><br>Analista de Dados <br> Business Intelligence</span></p>
                         <p><span class="title-s">Email: </span> <span>silviolima07@gmail.com</span></p>
-                        <p><span class="title-s">Fone: </span> <span>(+5512)99646-2527</span></p>
+                        <p><span class="title-s">Fone: </span> <span>(+55)1299646-2527</span></p>
                       </div>
                     </div>
                   </div>
