--- a/index.html
+++ b/index.html
@@ -362,6 +362,32 @@
         </div>
 		
 
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">AWS CI/CD - Continous Integration / Continous Delivery </h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">25/04/2021</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Implementação do CI/CD, usando CodeDeploy, CodeBuild e CodePipeline.<br> Uma aplicação é recompilada, o código atualizado e a versão nova é levada para um bucket no S3 que hospeda um site estático.
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "600" controls>
+                     <source src="assets/video/cicd.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
+		
 
 <!--------------------------->
 
