--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
 <!--------------------------->
 
-          <div class="col-md-4">
+    <!--      <div class="col-md-4">
             <div class="work-box">
               <a href="assets/images/people_speaking.jpg" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
@@ -645,7 +645,7 @@
                     <h2 class="w-title">Tradutor de Idiomas</h2>
                     <div class="w-more">
                       <span class="w-ctegory">NLP / Heroku</span> / <span class="w-date">15/04/2020</span>
-					  <!--<p class="subtitle-a">-->
+					  <!--<p class="subtitle-a">
 					  <p class="lead">
                       Leitura de texto digitados, conversão para diversos idiomas e leitura com voz.<br>
                     </p>
@@ -659,7 +659,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
 
  <!----------->
 
