Removed app reader

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
 <!------------------>
 
-          <div class="col-md-4">		 
+    <!--      <div class="col-md-4">		 
             <div class="work-box">
               <a href="assets/images/reader.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
@@ -580,7 +580,7 @@
                     <h2 class="w-title">Leitor de Texto com Voz</h2>
                     <div class="w-more">
                       <span class="w-ctegory">TextBlob / Heroku</span> / <span class="w-date">11/06/2020</span>
-					  <!--<p class="subtitle-a">-->
+					  <!--<p class="subtitle-a">
 					  <p class="lead">
                       Leitura de textos em txt e conversão de idioma.<br>
                     </p>
@@ -591,13 +591,13 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <!--<a href="https://share.streamlit.io/silviolima07/text-file-reader/app.py/"><span class="ion-ios-plus-outline"></span></a>-->
-					  <a href="https://app-text-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
+					  <!--<a href="https://app-text-reader.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         
 <!--------------------------->
 
