new artigo crisp-dm

--- a/index.html
+++ b/index.html
@@ -1334,6 +1334,27 @@
               </div>
             </div>
          </div>
+		 
+		 <div class="col-md-4">
+            <div class="card card-blog">
+              <div class="work-box">
+                <div class="work-img">
+                  <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">CRISP-DM</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Deploy do modelo</h3>-->
+                <p class="card-description">
+                </p>
+               <h3 class="card-title">Medium:<br><a href="https://medium.com/@silviolima07_26127/crisp-dm-para-projetos-de-machine-learning-394398e8c154">CRISP-DM para Projetos de Machine Learning</a></h3>
+              </div>
+            </div>
+         </div>
     </section><!-- End Blog Section -->
 
 
