--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-					<span>Scrap</span> <span class="pull-right">70%</span>
+					<span>WebScrap</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -393,7 +393,7 @@
                 </div>
               </div>
             </div>
-          </div>
+        
 		  
 
 <!--------------------------->
