--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
   <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="lead">
                 <div class="work-img">
                   <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
                 </div>
