new artigo crisp-dm

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
   <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="lead">
+              <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
                   <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
                 </div>
@@ -393,7 +393,7 @@
                 </div>
               </div>
             </div>
-        
+          </div>
 		  
 
 <!--------------------------->
