--- a/index.html
+++ b/index.html
@@ -405,6 +405,16 @@
 					  <p class="lead">
                       Implementação do CI/CD, usando CodeDeploy, CodeBuild e CodePipeline.<br> Uma aplicação é recompilada, o código atualizado e a versão nova é levada para um bucket no S3 que hospeda um site estático.
 					</p>
+					<div class="work-box">
+                <div class="work-img">
+                 <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://colab.research.google.com/github/silviolima07/autoencoders/blob/main/Autoencoder.ipynb"> <span class="ion-ios-plus-outline"></span></a>
+                    </div>
+                  </div> 
+				  
+                </div>
+            </div>
                     </div>
                   </div>
                 </div>
