--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@
           </div>
 		  
         <div class="work-content">
+		        <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="venobox">
+                <div class="work-img">
+                  <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">AUTOENCODERS - Detecção de Anomalias / Fraude / Remoção de Ruido e Redução de Dimensão</h2>
