new artigo crisp-dm

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 			  <p class="lead">
                 Aplicando os conhecimentos em análise de dados, criação de modelos e visualização de dados.</p>
 				<p class="lead" style="color:red;">Modelos alocados no Heroku e Shinyapps podem levar 30s  para iniciar.</p>
-                                <p class="lead"> Por favor, clique para abrir o app.<br></p>
+                                <p class="lead"> Por favor, clique para abrir o app ou notebook.<br></p>
                       <img src="assets/images/plus.png" alt="" class="img-fluid"> 
               
               <div class="line-mf"></div>
@@ -378,7 +378,7 @@
                       <span class="w-ctegory">AWS</span> / <span class="w-date">25/04/2021</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
-                      A arquitetura do autoencoder se baseia no aprendizado de caracteristicas de entrada, que devem estar presentes na saida.<br> Novos dados são apresentados e o modelo aplica o aprendizado e gera uma nova saida.
+                      A arquitetura do autoencoder se baseia no aprendizado de caracteristicas de entrada, que devem estar presentes na saida.<br> Novos dados são apresentados e o modelo aplica o aprendizado gerando uma nova saida.
 					</p>
 					<div class="work-box">
                 <div class="work-img">
