new artigo crisp-dm

--- a/index.html
+++ b/index.html
@@ -380,15 +380,13 @@
 					  <p class="lead">
                       A arquitetura do autoencoder se baseia no aprendizado de caracteristicas de entrada, que devem estar presentes na saida.<br> Novos dados são apresentados e o modelo aplica o aprendizado gerando uma nova saida.
 					</p>
-					<div class="work-box">
+		
                 <div class="work-img">
                  <div class="col-sm-4">
                     <div class="w-like">
                       <a href="https://colab.research.google.com/github/silviolima07/autoencoders/blob/main/Autoencoder.ipynb"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div> 
-				  
-                </div>
             </div>
                     </div>
                   </div>
@@ -399,7 +397,7 @@
                 <div class="work-img">
                  <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://colab.research.google.com/github/silviolima07/autoencoders/blob/main/Autoencoder.ipynb"> <span class="ion-ios-plus-outline"></span></a>
+                     <!-- <a href="https://colab.research.google.com/github/silviolima07/autoencoders/blob/main/Autoencoder.ipynb"> <span class="ion-ios-plus-outline"></span></a>-->
                     </div>
                   </div> 
 				  
