new artigo crisp-dm

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
               </a>
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">AutoEncoder - Detecção de Anomalias / Fraude / Remoção de Ruido / Redução de Dimensão</h2>
+                    <h2 class="w-title">AutoEncoder - Detecção de Anomalias / Fraude / Remoção de Ruido <br>- Redução de Dimensão</h2>
                     <div class="w-more">
                       <span class="w-ctegory">AWS</span> / <span class="w-date">25/04/2021</span>
 					  <!--<p class="subtitle-a"> -->
