--- a/index.html
+++ b/index.html
@@ -382,8 +382,7 @@
                       <span class="w-ctegory">Web Scrap </span> / <span class="w-date">04/05/2022</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
-                      Projeto de scrap de endereços de estabelecimentos comerciais, visando geração de leads e aumento de clientes.<br>
-				      Uso das libs: BeautifulSoup e request.<br>
+                      Projeto de scrap de endereços, visando geração de leads e aumento de clientes.<br>
                     </p>
                     </div>
                   </div>
